# agentmemory

./: concept.ipynb  pyproject.toml
.github/workflows/: cd.yml  ci.yml
notebooks/: 01-concept.ipynb
src/agentmemory/connection/: connection.py
src/agentmemory/connection/longterm/: collections.py  interface.py
src/agentmemory/connection/longterm/pymongo/: connection.py  conversations.py  personas.py  workflows.py
src/agentmemory/connection/shortterm/: cache.py  interface.py
src/agentmemory/connection/shortterm/redis/: connection.py
src/agentmemory/exc/: errors.py
src/agentmemory/memory/: conversations.py  memory.py  personas.py  workflows.py
src/agentmemory/schema/: agents.py  conversations.py  personas.py  tools.py  workflows.py
src/agentmemory/utils/transform/: todict.py
src/tests/agentmemory/: conftest.py
src/tests/agentmemory/connection/longterm/pymongo/conversations/: test_pymongo_conversation_items.py  test_pymongo_conversation_items_caching.py  test_pymongo_conversations.py  test_pymongo_conversations_caching.py
src/tests/agentmemory/connection/longterm/pymongo/personas/: test_pymongo_personas.py  test_pymongo_personas_caching.py
src/tests/agentmemory/connection/longterm/pymongo/workflows/: test_pymongo_workflow_items.py  test_pymongo_workflow_items_caching.py  test_pymongo_workflows.py  test_pymongo_workflows_caching.py
src/tests/agentmemory/utils/dataclasses/: test_default_factory_functions.py
src/tests/agentmemory/utils/validation/: test_instance.py  test_utils.py
